--- a/index.html
+++ b/index.html
@@ -4,7 +4,43 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Primary Meta Tags -->
     <title>Abitto Ferry</title>
+    <meta name="title" content="Abitto Ferry" />
+    <meta
+      name="description"
+      content="Experience the easiest and safest water travel with our well-maintained fleet, ensuring safety, comfort, and timely departures…"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://web.facebook.com/abittoglobal/" />
+    <meta property="og:title" content="Abitto Ferry" />
+    <meta
+      property="og:description"
+      content="Experience the easiest and safest water travel with our well-maintained fleet, ensuring safety, comfort, and timely departures…
+"
+    />
+    <meta
+      property="og:image"
+      content="https://i.ibb.co/yhmKFNd/abitto-Vector.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://twitter.com/AbittoGlobal" />
+    <meta property="twitter:title" content="Abitto Ferry " />
+    <meta
+      property="twitter:description"
+      content="Experience the easiest and safest water travel with our well-maintained fleet, ensuring safety, comfort, and timely departures…
+"
+    />
+    <meta
+      property="twitter:image"
+      content="https://i.ibb.co/yhmKFNd/abitto-Vector.png"
+    />
+    <!-- Meta Tags Generated with https://metatags.io -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
