--- a/index.html
+++ b/index.html
@@ -1,55 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/logo.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Primary Meta Tags -->
-    <title>Abitto Ferry</title>
-    <meta name="title" content="Abitto Ferry" />
-    <meta
-      name="description"
-      content="Experience the easiest and safest water travel with our well-maintained fleet, ensuring safety, comfort, and timely departures…"
-    />
+	<head>
+		<meta charset="UTF-8" />
+		<link rel="icon" type="image/svg+xml" href="/src/assets/logo.svg" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta
+			http-equiv="Cache-Control"
+			content="no-cache, no-store, must-revalidate"
+		/>
+		<meta http-equiv="Pragma" content="no-cache" />
+		<meta http-equiv="Expires" content="0" />
+		<!-- Primary Meta Tags -->
+		<title>Abitto Ferry</title>
+		<meta name="title" content="Abitto Ferry" />
+		<meta
+			name="description"
+			content="Experience the easiest and safest water travel with our well-maintained fleet, ensuring safety, comfort, and timely departures…"
+		/>
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://web.facebook.com/abittoglobal/" />
-    <meta property="og:title" content="Abitto Ferry" />
-    <meta
-      property="og:description"
-      content="Experience the easiest and safest water travel with our well-maintained fleet, ensuring safety, comfort, and timely departures…
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://web.facebook.com/abittoglobal/" />
+		<meta property="og:title" content="Abitto Ferry" />
+		<meta
+			property="og:description"
+			content="Experience the easiest and safest water travel with our well-maintained fleet, ensuring safety, comfort, and timely departures…
 "
-    />
-    <meta
-      property="og:image"
-      content="https://i.ibb.co/yhmKFNd/abitto-Vector.png"
-    />
+		/>
+		<meta
+			property="og:image"
+			content="https://i.ibb.co/yhmKFNd/abitto-Vector.png"
+		/>
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://twitter.com/AbittoGlobal" />
-    <meta property="twitter:title" content="Abitto Ferry " />
-    <meta
-      property="twitter:description"
-      content="Experience the easiest and safest water travel with our well-maintained fleet, ensuring safety, comfort, and timely departures…
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta property="twitter:url" content="https://twitter.com/AbittoGlobal" />
+		<meta property="twitter:title" content="Abitto Ferry " />
+		<meta
+			property="twitter:description"
+			content="Experience the easiest and safest water travel with our well-maintained fleet, ensuring safety, comfort, and timely departures…
 "
-    />
-    <meta
-      property="twitter:image"
-      content="https://i.ibb.co/yhmKFNd/abitto-Vector.png"
-    />
-    <!-- Meta Tags Generated with https://metatags.io -->
+		/>
+		<meta
+			property="twitter:image"
+			content="https://i.ibb.co/yhmKFNd/abitto-Vector.png"
+		/>
+		<!-- Meta Tags Generated with https://metatags.io -->
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+			rel="stylesheet"
+		/>
+	</head>
+	<body>
+		<div id="root"></div>
+		<script type="module" src="/src/main.jsx"></script>
+	</body>
 </html>
